update frontend admin

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" type="text/css" href="/css/vendor.css">
   <link rel="stylesheet" type="text/css" href="/style.css">
 
+  <!-- Sneat Admin CSS sẽ được nạp động khi vào trang admin để không ảnh hưởng MainPage -->
+
   <!-- Thư viện CSS bên ngoài -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -71,6 +73,8 @@
     Chúng ta sẽ khởi tạo (init) các thư viện này bên trong React.
   -->
   <!-- <script type="text/javascript" src="/js/script.js"></script> -->
+
+  <!-- Sneat base JS sẽ được nạp động khi vào trang admin -->
 
   <!-- Entry point của React Vite -->
   <script type="module" src="/src/main.jsx"></script>
